--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,8 +8,8 @@ als {
     }
     filter = []
     constraint = {
-      min_user_events = 1
-      max_user_events = 10
+      min_movie_ratings = 10
+      min_user_ratings = 20
     }
   }
 }
