added train impl

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,4 +12,15 @@ als {
       min_user_ratings = 20
     }
   }
+  train {
+    alg = {
+      seed = 0
+      rank = 10
+      reg_param = 0.01
+      alpha = 1.0
+      max_iter = 5
+      num_user_blocks = 8
+      num_item_blocks = 8
+    }
+  }
 }
