--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 als {
   etl {
     input = {
-      ratings = "data/movielens/ratings.csv"
-      movies = "data/movielens/movies.csv"
+      ratings = "data/ml-latest-small/ratings.csv"
+      movies = "data/ml-latest-small/movies.csv"
       header = true
       delimiter = ","
     }
@@ -15,12 +15,12 @@ als {
   train {
     alg = {
       seed = 0
-      rank = 50
+      rank = 100
       reg_param = 0.01
       alpha = 1.0
-      max_iter = 8
-      num_user_blocks = 8
-      num_item_blocks = 8
+      max_iter = 10
+      num_user_blocks = 20
+      num_item_blocks = 20
     }
   }
 }
